turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:19: error: illegal start of simple pattern
var rule:Array[Array[Array[Int]]] = T[U[V[6]]
^Turmite:105: error: '=' expected but '}' found.
}
^